force-app/main/default/objects/Job_Opening__c/Job_Opening__c.object-meta.xml
<CustomObject>
    <label>Job Opening</label>
    <nameField>
        <displayFormat>JOI-{YYYY}{MM}{DD}{000}</displayFormat>
        <label>Job Opening ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>