force-app/main/default/objects/Job_Opening__c/fields/Conditions_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_Employment__c</fullName>
    <label>Conditions of Employment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>