force-app/main/default/objects/Job_Opening__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <description>Used for the Apply on USAJobs button... you can find a control number on a USAJobs job posting, enter it in this field, and the USAJobs button will redirect you to that posting when you click on it.</description>
    <label>Control Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>