force-app/main/default/objects/Job_Opening__c/fields/Grade_or_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_or_Level__c</fullName>
    <formula>TEXT(Position__r.Grade_or_Level__c)</formula>
    <label>Grade or Level</label>
    <type>Text</type>
</CustomField>