force-app/main/default/objects/Job_Opening__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IMAGE( 
CASE( Priority_Value__c, 
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>