force-app/main/default/objects/Job_Opening__c/fields/Priority_Value__c.field-meta.xml
<CustomField>
    <fullName>Priority_Value__c</fullName>
    <label>Priority Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>