force-app/main/default/objects/Job_Opening__c/fields/Promotion_Potential__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Potential__c</fullName>
    <label>Promotion Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Grades</valueSetName>
    </valueSet>
</CustomField>