force-app/main/default/objects/Job_Opening__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>