force-app/main/default/objects/Job_Opening__c/fields/Salary_High__c.field-meta.xml
<CustomField>
    <fullName>Salary_High__c</fullName>
    <label>Salary High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>