force-app/main/default/objects/Job_Opening__c/fields/Step_or_Rate__c.field-meta.xml
<CustomField>
    <fullName>Step_or_Rate__c</fullName>
    <formula>TEXT(Position__r.Step_or_Rate__c)</formula>
    <label>Step or Rate</label>
    <type>Text</type>
</CustomField>