force-app/main/default/objects/Job_Opening__c/fields/Travel_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Travel_Percentage__c</fullName>
    <label>Travel Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Travel_Requirements</valueSetName>
    </valueSet>
</CustomField>