force-app/main/default/objects/Job_Opening__c/fields/USAJobsURL__c.field-meta.xml
<CustomField>
    <fullName>USAJobsURL__c</fullName>
    <description>Used by USAJobs button</description>
    <formula>&quot;https://www.usajobs.gov/GetJob/ViewDetails/&quot; + Control_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USAJobs URL</label>
    <type>Text</type>
</CustomField>