force-app/main/default/objects/Job_Opening__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Work_Schedule__c</columns>
    <columns>Grade_or_Level__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>Closing_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>