force-app/main/default/objects/Job_Opening__c/listViews/Draft_Job_Openings.listView-meta.xml
<ListView>
    <fullName>Draft_Job_Openings</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Position__c</columns>
    <columns>Grade_or_Level__c</columns>
    <columns>Desired_Start_Date__c</columns>
    <columns>Closing_Date__c</columns>
    <columns>Hiring_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Job Openings</label>
</ListView>